@@ -1,7 +1,7 @@
 Kmsgsd Benchmarks:
 
 The basic strategy in benchmarking kmsgsd is to get syslogd to write kern.info
-messages (which include ipchains and iptables log messages) to the 
+messages (which include iptables log messages) to the 
 /var/lib/psad/psadfifo named pipe.  Kmsgsd will then read the messages out of the 
 pipe as quickly as possible and write them to /var/log/psad/fwdata.  To 
 calculate how fast kmsgsd is we then compare the number of newly written 
@@ -20,7 +20,7 @@ TEST 1:
 - Ethernet: 100MB connection between the two machines.
 - Perl: 5.005_03
 - Scan command line: nmap -sX -p 5000-60000 <target_machine>
-- Approximate average number of iptables "DENY" messages printed to
+- Approximate average number of iptables "DROP" messages printed to
   /var/log/messages: 4400
 - Approximate average number of iptables messages caught by kmsgsd and
   printed to /var/log/psad/fwdata: 4325
@@ -36,7 +36,7 @@ TEST 2:
 - PIII 500mhz, 128 MB ram, kernel 2.4.0
 - Perl 5.005_03
 - Scan command line: nmap -sX -p 5000-60000 127.0.0.1
-- Number of iptables "DENY" messages printed to /var/log/messages: 14810
+- Number of iptables "DROP" messages printed to /var/log/messages: 14810
 - Number of iptables messages caught by kmsgsd and written to 
   /var/log/psad/fwdata: 14847
 
