@@ -8,52 +8,50 @@ Thanks to: (see the CREDITS file).
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 DESCRIPTION:
 
-    The Port Scan Attack Detector (psad) is a collection of four lightweight
+    The Port Scan Attack Detector (psad) is a collection of three lightweight
 system daemons written in Perl and in C that are designed to work with Linux
-firewalling code (iptables in the 2.4.x kernels, and ipchains in the 2.2.x
-kernels) to detect port scans and other suspect traffic.  It features a set of
-highly configurable danger thresholds (with sensible defaults provided),
-verbose alert messages that include the source, destination, scanned port
-range, begin and end times, tcp flags and corresponding nmap options (Linux
-2.4.x kernels only), reverse DNS info, email and syslog alerting, and
-automatic blocking of offending ip addresses via dynamic configuration of
-ipchains/iptables firewall rulesets.  In addition, for the 2.4.x kernels psad
-incorporates many of the tcp, udp, and icmp signatures included in the Snort
-intrusion detection system (http://www.snort.org) to detect highly suspect
-scans for various backdoor programs (e.g. EvilFTP, GirlFriend, SubSeven),
-DDoS tools (mstream, shaft), and advanced port scans (syn, fin, xmas) which
-are easily leveraged against a machine via nmap.  psad can also alert on
-snort signatures that are logged via fwsnort (which makes use of the iptables
-string match module to detect application layer signatures).  See the
+iptables firewalling code (iptables in the 2.4.x kernels) to detect port scans
+and other suspect traffic.  It features a set of highly configurable danger
+thresholds (with sensible defaults provided), verbose alert messages that
+include the source, destination, scanned port range, begin and end times,
+tcp flags and corresponding nmap options (Linux 2.4.x kernels only), reverse
+DNS info, email and syslog alerting, and automatic blocking of offending ip
+addresses via dynamic configuration of iptables firewall rulesets.  In
+addition, psad incorporates many of the tcp, udp, and icmp signatures included
+in the Snort intrusion detection system (http://www.snort.org) to detect
+highly suspect scans for various backdoor programs (e.g. EvilFTP, GirlFriend,
+SubSeven), DDoS tools (mstream, shaft), and advanced port scans (syn, fin,
+xmas) which are easily leveraged against a machine via nmap.  psad can also
+alert on snort signatures that are logged via fwsnort (which makes use of the
+iptables string match module to detect application layer signatures).  See the
 "--snort-sids" command line option.
 
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 METHODOLOGY:
 
-    All information psad analyzes is gathered from iptables/ipchains log
-messages.  psad creates a named pipe (/var/lib/psad/psadfifo) and
-reconfigures syslog to write kern.info messages to the pipe.  As log messages
-are generated by iptables or ipchains, a separate daemon (called kmsgsd) reads
-any messages that match a particular regular expression designed to catch
-dropped/rejected packets out of the pipe and write them to a separate file
-(/var/log/psad/fwdata).  psad is then responsible for reading messages as
-they are generated from this file and applying the danger threshold and
-signature logic in order to determine whether or not a port scan has taken
-place, send appropriate alerts to /var/log/psad/scanlog, send alert emails,
+    All information psad analyzes is gathered from iptables log messages.
+psad creates a named pipe (/var/lib/psad/psadfifo) and reconfigures syslog to
+write kern.info messages to the pipe.  As log messages are generated by
+iptables a separate daemon (called kmsgsd) reads any messages that match a
+particular regular expression designed to catch dropped/rejected packets out
+of the pipe and write them to a separate file (/var/log/psad/fwdata).  psad is
+then responsible for reading messages as they are generated from this file and
+applying the danger threshold and signature logic in order to determine
+whether or not a port scan has taken place, send appropriate alert emails,
 and (optionally) block offending ip addresses.  psad includes a signal
 handler such that if a USR1 signal is received, psad will dump the contents
 of the current scan hash data structure to /var/log/psad/scan_hash.$$ where
 "$$" represents the pid of the running psad daemon.
 
-    NOTE:  Since psad relies on iptables/ipchains to generate appropriate
-log messages for unauthorized packets, psad is only as good as the logging
-rules included in the iptables/ipchains ruleset.  Usually the best way setup
-the firewall is with a default "deny and log" rule at the end of the ruleset,
-and include rules above this last rule that only allow traffic that should
-be allowed through.  Upon execution, the psad daemon will attempt to
-ascertain whether or not such a default deny rule exists, and will warn the
-administrator if it doesn't.  See the FW_EXAMPLE_RULES file for example
-firewall rulesets that are compatible with psad.
+    NOTE:  Since psad relies on iptables to generate appropriate log messages
+for unauthorized packets, psad is only as good as the logging rules included
+in the iptables ruleset.  Usually the best way setup the firewall is with a
+default "drop and log" rule at the end of the ruleset, and include rules above
+this last rule that only allow traffic that should be allowed through.  Upon
+execution, the psad daemon will attempt to ascertain whether or not such a
+default deny rule exists, and will warn the administrator if it doesn't.  See
+the FW_EXAMPLE_RULES file for example firewall rulesets that are compatible
+with psad.
 
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 INSTALLATION:
