@@ -2,7 +2,7 @@
 .TH KMSGSD 8 "November 2002" "Debian/GNU Linux"
 .SH NAME
 .B kmsgsd
-\- separates ipchains/iptables messages from all other kernel messages.
+\- separates iptables messages from all other kernel messages.
 .SH SYNOPSIS
 .B kmsgsd
 .SH DESCRIPTION
