@@ -1,3 +1,7 @@
+psad-1.3 ():
+    - Added support for the iptables output chain.
+    - Removed support for ipchains.
+
 psad-1.2.4 (10/15/2003):
     - Added danger level to subject line in email alerts.
     - Removed diskmond altogether since psad now handles disk space
